Fix page layout spacing for sidebar

--- a/ems-front/src/index.css
+++ b/ems-front/src/index.css
@@ -20,12 +20,15 @@ body {
   background-color: #EBF2FA;
 }
 
+body:has(.ems-navigation) {
+  padding-left: 220px;
+}
+
 .divcenter{ padding-top:12px; width: 80%; margin:auto;}
 
 /*EMS HEADER*/
 .ems-header{
-  width: calc(100% - 220px);
-  margin-left: 220px;
+  width: 100%;
   padding: 20px;
   color:white;
   background-color: #1B2A41;
@@ -94,14 +97,6 @@ body {
   text-align: left !important;
   padding:0px !important;
 }
-
-.ems-navigation ~ * {
-  margin-left: calc(220px + 5%);
-  margin-right: 5%;
-  width: auto;
-}
-
-
 
 /* Employee Search Styling */
 
@@ -531,9 +526,12 @@ h3 {
 }
 
 @media (max-width: 800px) {
+  body:has(.ems-navigation) {
+    padding-left: 0;
+  }
+
   .ems-header {
     width: 100%;
-    margin-left: 0;
   }
 
   .ems-navigation {
@@ -555,12 +553,6 @@ h3 {
 
   .ems-navigation ul li {
     display: block;
-  }
-
-  .ems-navigation ~ * {
-    margin-left: auto;
-    margin-right: auto;
-    width: 92%;
   }
 
   .ems-home-grid {
